added Google Colab to recommended extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
     "recommendations": [
         "google.geminicodeassist",
         "ms-toolsai.jupyter",
-        "ms-python.python"
+        "ms-python.python",
+        "google.colab"
     ]
 }
